2011-04-09  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by James Robinson.

        Add a diagram, explaning how  an event's relatedTarget interact with shadow DOM boundaries.
        https://bugs.webkit.org/show_bug.cgi?id=58190

        * misc/related-target-and-shadow-dom.svg: Added.

2011-04-06  David Levin  <levin@chromium.org>

        Reviewed by Ojan Vafai.

        Augment style guidelines about meaningless parameters from text the unwritten rules email.
        https://bugs.webkit.org/show_bug.cgi?id=55275

        * coding/coding-style.html:

2011-04-05  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Add Web Inspector stack trace, pause on exception and window.onerror
        screenshots.

        * blog-files/inspector/stack-traces-img/1.png: Added.
        * blog-files/inspector/stack-traces-img/2.png: Added.
        * blog-files/inspector/stack-traces-img/3.png: Added.
        * blog-files/inspector/stack-traces-img/4.png: Added.
        * blog-files/inspector/stack-traces-img/5.png: Added.
        * blog-files/inspector/stack-traces-img/6.png: Added.
        * blog-files/inspector/stack-traces-img/button.png: Added.

2011-02-26  David Levin  <levin@chromium.org>

        Reviewed by Darin Adler.

        Add style guidelines about comments from the unwritten rules email.
        https://bugs.webkit.org/show_bug.cgi?id=55272

        * coding/coding-style.html: Added the guidelines.

2011-02-09  Alexander Pavlov  <apavlov@chromium.org>

        Unreviewed. Add Web Inspector stylesheet resource diff screenshot.

        * blog-files/inspector/css_rule_diff.png: Added.

2011-02-07  Alexander Pavlov  <apavlov@chromium.org>

        Unreviewed. Add Web Inspector warning 10x10 PNG, move files from r77801 into the inspector/ directory.

        * blog-files/inspector/css_as_authored.png: Renamed from Websites/webkit.org/blog-files/inspector-css-as-authored.png.