@@ -1,3 +1,15 @@
+2011-04-26  Carol Szabo  <carol.szabo@nokia.com>
+
+        Reviewed by Tor Arne Vestbø.
+
+        Added instructions on how to work from behind proxy
+        and detailed the instructions refering to rebasing.
+        Windows build instructions do not work if you are behind a proxy
+        or have a Temp directory that you do not own directly.
+        https://bugs.webkit.org/show_bug.cgi?id=57246
+
+        * building/tools.html:
+
 2011-04-09  Dimitri Glazkov  <dglazkov@chromium.org>
 
         Reviewed by James Robinson.
